# rusty-blockparser

./: .gitignore  .travis.yml  Cargo.toml  README.md  update_clusters.sh  views.sql
.github/: FUNDING.yml
.github/workflows/: rust.yml
clusterizer/: tx_out-0-10000.idx  tx_out-10000-20000.idx  tx_out-100000-110000.idx  tx_out-110000-120000.idx  tx_out-120000-130000.idx  tx_out-130000-140000.idx  tx_out-140000-150000.idx  tx_out-150000-160000.idx  tx_out-160000-170000.idx  tx_out-170000-180000.idx  tx_out-180000-190000.idx  tx_out-190000-200000.idx  tx_out-20000-30000.idx  tx_out-200000-210000.idx  tx_out-210000-220000.idx  tx_out-220000-230000.idx  tx_out-230000-240000.idx  tx_out-240000-250000.idx  tx_out-250000-260000.idx  tx_out-260000-270000.idx  tx_out-270000-280000.idx  tx_out-280000-290000.idx  tx_out-290000-300000.idx  tx_out-30000-40000.idx  tx_out-300000-310000.idx  tx_out-310000-320000.idx  tx_out-320000-330000.idx  tx_out-330000-340000.idx  tx_out-340000-350000.idx  tx_out-350000-360000.idx  tx_out-360000-370000.idx  tx_out-370000-380000.idx  tx_out-380000-390000.idx  tx_out-390000-400000.idx  tx_out-40000-50000.idx  tx_out-400000-410000.idx  tx_out-410000-420000.idx  tx_out-420000-430000.idx  tx_out-430000-440000.idx  tx_out-440000-450000.idx  (+9 more)
sql/: schema.sql
src/: common.rs  errors.rs  main.rs
src/blockchain/: mod.rs
src/blockchain/parser/: blkfile.rs  chain.rs  index.rs  mod.rs  reader.rs  types.rs  worker.rs
src/blockchain/proto/: block.rs  header.rs  mod.rs  opcodes.rs  script.rs  tx.rs  varuint.rs
src/blockchain/proto/script/: custom.rs  mod.rs
src/blockchain/utils/: blkfile.rs  csv.rs  mod.rs  reader.rs
src/callbacks/: balancecsvdump.rs  balances.rs  clusterizer.rs  common.rs  csvdump.rs  mod.rs  opreturn.rs  simplestats.rs  stats.rs  txoutdump.rs  unspentcsvdump.rs  utxodump.rs
src/common/: logger.rs  mod.rs  utils.rs
