[package]
name = "rusty-blockparser"
version = "0.7.0"
authors = ["gcarq <egger.m@protonmail.com>"]
include = ["src/*", "sql/*", "LICENSE", "README.md", "Cargo.toml"]
description = "Blockchain Parser for most common Cryptocurrencies based on Bitcoin"
documentation = "https://github.com/gcarq/rusty-blockparser/blob/master/README.md"
homepage = "https://github.com/gcarq/rusty-blockparser/"
readme = "README.md"
keywords = ["Cryptocurrency", "Bitcoin", "Litecoin", "Blockchain", "Parser"]
license = "GPL-3.0"

[dependencies]
time = { version = "^0.2", default-features = false, features = ["std"] }
log = { version = "^0.4", default-features = false, features = ["std"] }
clap = "^2.26"
rust-crypto = "^0.2"
byteorder = "^1.3"
rust-base58 = "^0.0"
rusty-leveldb = "^0.3"
dirs = "^3.0"
bitcoin = "^0.23"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0                # Controls the --opt-level the compiler builds with
debug = true                 # Controls whether the compiler passes `-g`
rpath = false                # Controls whether the compiler passes `-C rpath`
lto = false                  # Controls `-C lto` for binaries and staticlibs
debug-assertions = true      # Controls whether debug assertions are enabled
codegen-units = 1            # Controls whether the compiler passes `-C codegen-units`
                             # `codegen-units` is ignored when `lto = true`

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

# The testing profile, used for `cargo test`
[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

# The benchmarking profile, used for `cargo bench`
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
